--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,6 +30,7 @@
 				<p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit" th:text="Login"></button>
+			<button class="btn btn-lg btn-primary btn-block" value="Register" type="button" th:text="Register" onclick="location.href='/registration'"></button>
 		</form>
 	</div>
 </body>
