--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,7 +15,7 @@
 	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-md-6 col-md-offset-4">
 				<form autocomplete="off" action="#" th:action="@{/registration}"
 					th:object="${user}" method="post" class="form-horizontal"
 					role="form">
@@ -53,7 +53,16 @@
 								class="validation-message"></label>
 						</div>
 					</div>
-
+					<div class="form-group">
+						<div class="col-sm-9">
+							<input type="text" th:field="*{phoneNumber}"
+								placeholder="Phone Number" class="form-control" />
+							<label 
+								th:if="${#fields.hasErrors('phoneNumber')}"
+								th:errors="*{phoneNumber}"
+								class="validation-message"></label>
+						</div>
+					</div>
 					<div class="form-group">
 						<div class="col-sm-9">
 							<button type="submit" class="btn btn-primary btn-block">Register User</button>
