Addition Updates - REST calls Added REST calls and datatable usage to make changes more faster.

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -27,6 +27,17 @@
 					<img th:src="@{/images/beer.jpg}" class="img-responsive center-block" width="400" height="400" alt="Beer" /> 
 				</div>
 				<p class="admin-message-text text-center" th:utext="${adminMessage}"></p>
+				<div>
+					<form th:action="@{/admin/product}" method="get">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">Add Product</button>
+					</form>
+					<form th:action="@{/admin/listUser}" method="get">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">List of Users</button>
+					</form>
+					<form th:action="@{/admin/listProduct}" method="get">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">List of Products</button>
+					</form>	
+				</div>
 			</div>
 		</div>
 		
