--- a/src/main/resources/templates/admin/productlist_rest.html
+++ b/src/main/resources/templates/admin/productlist_rest.html
@@ -2,8 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-<head>
-	<title>Users List</title>
+	<title>Product List</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -12,93 +11,57 @@
   	<script type="text/javascript" >
 	  	$(document).ready(function() {
 	  	    $('#userDataTable').DataTable( {
-	  	        "sAjaxSource": "listUserRest",
+	  	        "sAjaxSource": "listProductRest",
 	  	        "sAjaxDataProp": "content",
 	  	        "aoColumns": [
-	  	            { "mData": "name" },
-	  	            { "mData": "lastName" },
-	  	            { "mData": "email" },
-	  	            { "mData": "phoneNumber" }
+	  	            { "mData": "productCategory" },
+	  	            { "mData": "productName" },
+	  	            { "mData": function(manifold){
+	  	            	if(manifold == true){
+	  	            		return "Yes";
+	  	            	}else{
+	  	            		return "No";
+	  	            	}
+	  	            } }
 	  	        ]
 	  	    } );
 	  	} );
   	</script>
-</head>
 <body>
 	<div class="container-fluid">
 		<form th:action="@{/admin/home}" method="get">
 			<button class="btn btn-md btn-warning btn-block" type="Submit">Home</button>
-		</form>	
-		
+		</form>
 		<div class="col-md-12">
 			<div class="col-md-4"></div>
-			<div class="col-md-4"><h1>List of Users</h1></div>
+			<div class="col-md-4"><h1>List of Products</h1></div>
 			<div class="col-md-4"></div>
 		</div>
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th>
-						First Name
-					</th>
-					<th>
-						Last Name
-					</th>
-					<th>
-						Email
-					</th>
-					<th>
-						Phone Number
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="curUser, start:${userList}">
-					<td th:text="${curUser.getName()}">
-					</td>
-					<td th:text="${curUser.getLastName()}">
-					</td>
-					<td th:text="${curUser.getEmail()}">
-					</td>
-					<td th:text="${curUser.getPhoneNumber()}">
-					</td>
-				</tr>
-			</tbody>
-		</table>
 		
-		<br>
-		<hr>
-		<br>
 		<table id="userDataTable" >
 			<thead>
 				<tr>
 					<th>
-						First Name
+						Product Category
 					</th>
 					<th>
-						Last Name
+						Product Name
 					</th>
 					<th>
-						Email
-					</th>
-					<th>
-						Phone Number
+						is Manifold?
 					</th>
 				</tr>
 			</thead>
 			<tfoot>
 				<tr>
 					<th>
-						First Name
+						Product Category
 					</th>
 					<th>
-						Last Name
+						Product Name
 					</th>
 					<th>
-						Email
-					</th>
-					<th>
-						Phone Number
+						is Manifold?
 					</th>
 				</tr>
 			</tfoot>
