--- a/src/main/resources/templates/admin/product_add.html
+++ b/src/main/resources/templates/admin/product_add.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Add New Product</title>
+<link rel="stylesheet" href="text/css" th:href="@{/css/validation.css}">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -12,8 +13,11 @@
 
 	<div class="container">
 		<div class="row">
+			<form th:action="@{/admin/home}" method="get">
+				<button class="btn btn-md btn-warning btn-block" type="Submit">Home</button>
+			</form>
 			 <div class="col-md-6 col-md-offset-4">
-			 	<form autocomplete="off" action="#" th:action="@{/product}"
+			 	<form autocomplete="off" action="#" th:action="@{/admin/product}"
 					th:object="${product}" method="post" class="form-horizontal"
 					role="form">
 					<h2>Add a new product</h2>
