--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -27,7 +27,7 @@
 					<img th:src="@{/images/beer.jpg}" class="img-responsive center-block" width="400" height="400" alt="Beer" /> 
 				</div>
 				<p class="admin-message-text text-center" th:utext="${adminMessage}"></p>
-				<div>
+				<div class="button-div">
 					<form th:action="@{/admin/product}" method="get">
 						<button class="btn btn-lg btn-warning btn-block" type="Submit">Add Product</button>
 					</form>
