Adding Segment updates - Partial commit

--- a/src/main/resources/templates/admin/product_segment_add.html
+++ b/src/main/resources/templates/admin/product_segment_add.html
@@ -12,7 +12,8 @@
 <div class="container">
 	<h2>Add New Segment</h2>
 	<hr>
-	<div>
+	<div th:object="${product}">
+		Product Id : <p	th:field="*{productId}"/><br /><br />Ketan
 		Product Details <br /><br />
 		Product Name: xyz <br />
 		Product Category: valve <br />
@@ -20,7 +21,7 @@
 	</div>
 	<hr>
 	<div>
-		
+				
 	</div>
 </div>
 </body>
