--- a/src/main/resources/templates/admin/productlist_rest.html
+++ b/src/main/resources/templates/admin/productlist_rest.html
@@ -47,7 +47,7 @@
 	  	
 	  	function addSegmentCallById(productId){
 	  		alert(productId+' This is yet in TODO task...');
-	  		//document.location.href = "deleteProduct?product_id="+productId;
+	  		document.location.href = "viewProductSegment?product_id="+productId;
 	  	}
   	</script>
 <body>
