Product to Segment updates - Partial

--- a/src/main/resources/templates/admin/product_segment_add.html
+++ b/src/main/resources/templates/admin/product_segment_add.html
@@ -10,19 +10,74 @@
 </head>
 <body>
 <div class="container">
+	<form th:action="@{/admin/home}" method="get">
+		<button class="btn btn-md btn-warning btn-block" type="Submit">Home</button>
+	</form>
 	<h2>Add New Segment</h2>
 	<hr>
-	<div th:object="${product}">
-		Product Id : <p	th:field="*{productId}"/><br /><br />Ketan
-		Product Details <br /><br />
-		Product Name: xyz <br />
-		Product Category: valve <br />
-		is Manifold? Yes <br />
+	<div class="well .well-sm">
+		<table style="width: 100%">
+			<tr>
+				<td>
+					<label>Product Id: </label><p th:text="${product.productId}"></p>					
+				</td>
+				<td>
+					<label>Product Name:</label><p th:text="${product.productName}"></p>
+				</td>
+				<td>
+					<label>Product Category:</label><p th:text="${product.productCategory}"></p>
+				</td>
+				<td>
+					<label>is Manifold?</label><p th:text="${product.manifold?'Yes':'No'}"></p>
+				</td>
+			</tr>
+		</table>
 	</div>
 	<hr>
-	<div>
-				
-	</div>
+	<div class="col-md-6 col-md-offset-4">
+	 	<form autocomplete="off" action="#" th:action="@{/admin/updateProductSegment}"
+			th:object="${segment}" method="post" class="form-horizontal"
+			role="form">
+			<h2 th:text="${segment.segmentId != 0 ? 'Update segment' : 'Add a new segment'}"></h2>
+			<input type="hidden" name="productId" th:field="${product.productId}" ></input>
+			<input type="hidden" th:field="*{segmentId}" ></input>
+			<div class="form-group">
+				<div class="col-sm-9">
+					<label th:if="${#fields.hasErrors('segmentEnglishName')}" th:errors="*{segmentEnglishName}"
+							class="validation-message"></label>
+					<input type="text" th:field="*{segmentEnglishName}" placeholder="Segment English Name"
+							class="form-control" /> 
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-9">
+					<input type="text" th:field="*{segmentFrenchName}" placeholder="Segment French Name"
+							class="form-control" /> 
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-9">
+					<input type="text" th:field="*{segmentGermanName}" placeholder="Segment German Name"
+							class="form-control" /> 
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-9">
+					<button type="submit" class="btn btn-primary btn-block">
+						Save
+					</button>
+				</div>
+			</div>
+		</form>
+
+		<div class="col-sm-9">
+			<form th:action="@{/admin/listProductSegments}" method="get">
+				<button class="btn btn-md btn-warning btn-block" type="Submit">List of Product Segments</button>
+			</form>	
+			<span th:utext="${successMessage}"></span>
+		 </div>
+			
+	 </div>
 </div>
 </body>
 </html>
