Way 2 - Everything in AJAX based.

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -36,6 +36,9 @@
 					</form>
 					<form th:action="@{/admin/listProduct}" method="get">
 						<button class="btn btn-lg btn-warning btn-block" type="Submit">List of Products</button>
+					</form>
+					<form th:action="@{/admin/w2/listProduct}">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">Multilanguage Description Management - Way 2</button>
 					</form>	
 				</div>
 			</div>
