Updates added for price included with the base item and link to the home screen.

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -40,6 +40,15 @@
 					<form th:action="@{/admin/w2/listProduct}">
 						<button class="btn btn-lg btn-warning btn-block" type="Submit">Multilanguage Description Management - Way 2</button>
 					</form>	
+					<form th:action="@{/admin/baseItem}">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">Add / Edit / Update Item</button>
+					</form>	
+					<form th:action="@{/admin/itemType}">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">Add / Edit / Update Item Type</button>
+					</form>	
+					<form th:action="@{/admin/menuCreate}">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">Add / Edit / Update Menu Item</button>
+					</form>	
 				</div>
 			</div>
 		</div>
