--- a/src/main/resources/templates/admin/item/base_item.html
+++ b/src/main/resources/templates/admin/item/base_item.html
@@ -56,13 +56,15 @@
 				<div class="col-md-12" style="border-style: solid; border-color: #ddd; border-width: 1px; border-radius: 4px; text-shadow: 5px; margin-bottom: 10px; padding: 5px;">
 					<form autocomplete="off" action="#" th:action="@{/admin/baseItemAdd}"
 						th:object="${baseItem}" method="post" class="form-inline">
-						<div class="col-md-6 col-md-offset-3">
+						<div class="col-md-8 col-md-offset-3">
 							<input type="hidden" th:field="*{baseItemId}" ></input>
 							<input type="text" th:field="*{itemName}"  placeholder="Item Name"
 										class="form-control" /> 
 							<select class="form-control" id="itemType" th:field="*{itemTypeObj}">
 									<option th:each="itemTypeObj : ${itemTypeList}" th:value="${itemTypeObj.itemTypeId}" th:text="${itemTypeObj.itemTypeName}"/>
 							</select>
+							<input type="text" th:field="*{price}"  placeholder="Price $"
+										class="form-control" size="4"/>$
 							<button type="submit" class="btn btn-primary" th:text="${baseItem.baseItemId == 0}?'Save':'Update'">
 								Save
 							</button>
@@ -88,6 +90,9 @@
 									Item Type
 								</th>
 								<th>
+									Price
+								</th>
+								<th>
 									&nbsp;
 								</th>
 								<th>
@@ -110,6 +115,9 @@
 								</td>
 								<td th:text="${biObj.itemTypeObj.itemTypeName}">
 									Item Type
+								</td>
+								<td th:text="${biObj.price}+' $'">
+									Price
 								</td>
 								<td>
 									<form
