--- a/src/main/resources/templates/admin/item/menu_generator.html
+++ b/src/main/resources/templates/admin/item/menu_generator.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+	
+</script>
 </head>
 <body>
 	<div class="container">
@@ -15,8 +18,7 @@
 					<div class="panel-heading" style="text-align: center">Create Menu Item and Price details for the same</div>
 					<div class="panel-body">
 						<div class="col-md-12">
-							<input type="text" th:field="*{itemName}" placeholder="Item Name"
-										class="form-control" />												
+															
 						</div>
 					</div>
 				</div>
