--- a/src/main/resources/templates/admin/item/menu_generator.html
+++ b/src/main/resources/templates/admin/item/menu_generator.html
@@ -6,8 +6,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script th:src='@{/tinymce/tinymce.min.js}'></script>
 <script type="text/javascript">
-	
+	tinymce.init({
+		selector: 'textarea',
+		toolbar1: "bold italic underline"
+	});
 </script>
 </head>
 <body>
@@ -43,6 +47,7 @@
 					<div class="panel-body">
 						<div class="col-md-12">
 							<div class="col-md-8">
+								<input type="hidden" th:field="*{fixedMenuItemObj.fixedMenuItemsId}" ></input>
 								<textarea rows="4" 
 									cols="100%" 
 									th:field="*{fixedMenuItemObj.fixedMenuDescription}" 
