Generating logic for changing selection from FixedMenuItem to Customized Menu Item

--- a/src/main/resources/templates/admin/item/menu_generator.html
+++ b/src/main/resources/templates/admin/item/menu_generator.html
@@ -63,9 +63,10 @@
 					<div class="panel-body">
 						<div class="col-md-12">
 							<div class="col-md-8">
+								<input type="hidden" th:field="*{customMenuItemObj.customMenuItemId}" >
 								<textarea rows="4" 
 									cols="100%" 
-									th:field="*{fixedMenuItemObj.fixedMenuDescription}" 
+									th:field="*{customMenuItemObj.customizationDescription}" 
 									placeholder="Fill complete Fixed manu display description"
 									class="form-control"></textarea>
 								
