List menu page learning

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -49,6 +49,9 @@
 					<form th:action="@{/admin/menuCreate}">
 						<button class="btn btn-lg btn-warning btn-block" type="Submit">Add / Edit / Update Menu Item</button>
 					</form>	
+					<form th:action="@{/admin/menuCreatorList}">
+						<button class="btn btn-lg btn-warning btn-block" type="Submit">List Menu Item</button>
+					</form>	
 				</div>
 			</div>
 		</div>
